Complete Flex Exercise 4 I think I have a decent solution. My solution is visibly slightly different from the provided solution. If one goes back and forth between the html files it's clear my text for the items is slightly closely. I'm gonna try to fixe this but for right now I'm pretty happy. I have been struggle on the other exercises so it feels really good to complete this exercise without any help.

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,10 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+
+  /*Added Code*/
+  display:flex;
+  justify-content: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +27,25 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+.items{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  text-wrap: wrap;
+  width:200px;
+  height:auto
+
+}
+.containter{
+  display:flex;
+  gap:52px;
+  justify-content: center;
+
+}
+.info{
+  display:flex;
+  gap: 32px;
+  flex-direction: column;
 }
